# THSAutoTrader

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  scripts.py  投资机器人.spec  自动交易.spec
.claude/: settings.local.json
front/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  settings.json  vite.config.js
front/.claude/: settings.local.json
front/src/: App.vue  main.css  main.js
html/: astock.html  index.html
html/css/: AssetManagement-bad4fe70.css  Backtest-addc5f24.css  DataUpdate-1d2df668.css  Index-a6dfa29f.css  Index-c1cbc3d6.css  Index-f03dc29d.css  Index-fba13898.css  LLMInterface-8a3277fc.css  LLMInterface-99dad86c.css  LLMInterface-dadfbc70.css  MultiStockChart-41ab51d8.css  MultiStockChart-8ebe8582.css  StockPool-7df58e0f.css  StockPool-f25876ba.css  StockTable-4e53c77e.css  TradingMonkey-93406563.css  TradingStrategy-d208163b.css  TradingStrategy-d77ba16e.css  WebRTC-ee347085.css  WebSocketConnection-309833a0.css  WindowControl-29a1e231.css  WindowControl-bb76f9c5.css  ZTTianTi-074e0406.css  ZTTianTi-a3a94421.css  index-6c1be5c5.css  index-fd3b4023.css
html/js/: AssetManagement-24e97328.js  AssetManagement-24e97328.js.map  AssetManagement-7f494b0a.js  AssetManagement-7f494b0a.js.map  AssetManagement-c0ef5fe5.js  AssetManagement-c0ef5fe5.js.map  Backtest-3b5068aa.js  Backtest-3b5068aa.js.map  Backtest-3d4ea8ae.js  Backtest-3d4ea8ae.js.map  Backtest-58f1b5c6.js  Backtest-58f1b5c6.js.map  Backtest-a2910142.js  Backtest-a2910142.js.map  Backtest-debd7687.js  Backtest-debd7687.js.map  DataUpdate-3177b663.js  Index-4b1c9a72.js  (+190 more)
(+88 files in other folders)
